2003-10-21  James Tanis  <jtt@pearl.sysdetect.com>

	* src/bdtee.c (out_file_handler): Continue relaying in the face of
	a write error to the tee file.
	(relay_tee): Only write NEWLINE before direction indicator when needed.

2003-10-20  James Tanis  <jtt@pearl.sysdetect.com>

	* src/bttcp.c (relay_finish): Only execute when the relay is
	finsihed. 

	* src/bdtee.c (proginit): Truncate tee file if it exists.
	(proginit): Close extraneous child descriptors.

	* lib/b_ioh.c (BK_IOH_SHUTDOWN): Shutdown only works on full
	duplex descriptors, close(2) others.
	(bk_ioh_shutdown): Shutdown correct descriptor on SHUT_WR.
	(ioh_execute_cmds): Ditto.

	* lib/b_exec.c (bk_pipe_to_process): Allow caller to close all
	"extraneous" descriptors (ie not stdin, stdout, stderr, and pipe
	descriptors) in child. 
	(bk_pipe_to_exec): Close extraneous child desc's if asked.
	(bk_pipe_to_cmd_tokenize): Ditto.

2003-10-16  James Tanis  <jtt@pearl.sysdetect.com>

	* lib/b_relay.c (bk_relay_iohhandler): If defined, invoke callback
	on reads.

2003-10-27  James Tanis  <jtt@pearl.sysdetect.com>

	* test/entropy/randtest.c: <libbk.h> apparently not needed at all.

2003-10-07  Alexander Dupuy  <dupuy@sysdetect.com>

	* ssl/Make.include (BK_EXTERNAL_RPATH): #2174: don't embed build area,
	use BK_SSL_RPATH = BK_INSTALLRPATH instead

2003-09-24  James Tanis  <jtt@pearl.sysdetect.com>

	* src/bk_daemon.c: Added functions to be quiet [i.e. not print pid
	in parent] and to open stderr/stdout on a file with optional append.

2003-09-11  Seth Robertson  <seth@buscemi.sysdetect.com>

	* lib/b_ringbuf.c (bk_ring_length): Function to return current
	size [number of items in] of ring.

2003-09-16  James Tanis  <jtt@buscemi.sysdetect.com>

	* xml/b_minimize.c: Functions (some moved from libfeatureset.c) to
	mimimize and md5 an xml tree.

2003-09-15  James Tanis  <jtt@buscemi.sysdetect.com>

	* lib/b_ringbuf.c: Make NO_PTHREADS work.

2003-09-02  James Tanis  <jtt@cheviot.sysdetect.com>
